--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pages:deploy": "npm run build && wrangler pages deploy ./dist"
   },
   "dependencies": {
+    "@resvg/resvg-js": "^2.6.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "html2canvas": "^1.4.1",
