--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,15 +1,6 @@
 name = "invoice-generator"
 compatibility_date = "2024-01-01"
-
-[site]
-bucket = "./dist"
-entry-point = "workers-site"
-
-[build]
-command = "npm run build"
-
-[env.production]
-workers_dev = true
+pages_build_output_dir = "./dist"
 
 [observability]
 enabled = true
