--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "satori": "^0.10.13"
   },
   "devDependencies": {
+    "@cloudflare/puppeteer": "^0.0.14",
     "@cloudflare/workers-types": "^4.0.0",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
