--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,4 @@
 name = "invoice-generator"
 compatibility_date = "2024-11-06"
 compatibility_flags = [ "nodejs_compat_v2" ]
-
-browser = { binding = "MYBROWSER" }
+pages_build_output_dir = "./dist"
