--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx tsc && npx vite build",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "pages:dev": "wrangler pages dev --compatibility-date=2024-01-01 -- npm run dev",
@@ -14,13 +14,12 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "satori": "^0.10.13"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@cloudflare/puppeteer": "^0.0.14",
     "@cloudflare/workers-types": "^4.0.0",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
