--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,7 +2,7 @@
   "name": "invoice-generator",
   "compatibility_date": "2024-11-06",
   "compatibility_flags": ["nodejs_compat_v2"],
-  "main": "./dist/index.html",
+  "main": "./src/index.ts",
   "assets": {
     "directory": "./dist",
     "binding": "ASSETS"
